# QtReco

./: .travis.yml  CMakeLists.txt  QtReco.pro  QtRecoConfig.cmake  QtRecoConfigVersion.cmake  README.md  README.txt
.travis-ci.d/: build.sh  cern.ch.conf  default.conf  default.local  desy.de.conf
cmake/: QTRECOConfig.cmake.in  QtRecoConfig.cmake.in  QtRecoConfig.h.cmake.in  QtRecoConfigVersion.cmake.in
include/: AnalysisThread.h  ApplicationModuleApi.h  DMAHCAL.h  DMAHCALMainWindow.h  DMAHCALStorage.h  Logger.h  QtRecoConfig.h  SedModule.h  ServerModule.h  XmlParser.h  glced.h
lib/cmake/: QtRecoLibDeps.cmake
mapping/: MapChipChan2IJK_May2016_2ndConfig.txt
ressource/: ressources.qrc
scripts/: #findRun.sh#  Reco_sed.sh  findRun.sh  findRun.sh_bak  myMarlin.sh
source/: CMakeLists.txt
source/include/: AnalysisModule.h  AnalysisThread.h  ApplicationModuleApi.h  DMAHCALBooker.h  DMAHCALMainWindow.h  EventDisplayWindow.h  MarlinModule.h  QtRecoConfig.h  RequestHandler.h  ServerModule.h
source/main/: QtReco.cpp
source/src/: AnalysisThread.cpp  AnalysisThread.cpp.orig  ApplicationModuleApi.cpp  DMAHCALBooker.cpp  DMAHCALMainWindow.cpp  EventDisplayWindow.cpp  Logger.cpp  MarlinModule.cpp  RequestHandler.cpp  ServerModule.cpp  XmlParser.cpp  glced.cpp
src/: AnalysisModule.cpp  DMAHCALMainWindow.cpp  DMAHCALStorage.cpp  SedModule.cpp  ServerModule.cpp
ui/: DMAHCALMainWindow.ui  EventDisplayWindow.ui  Reco.xml
xml/: .steering.xml.swo  MapChipChan2IJK_August2015.txt  MapChipChan2IJK_July2015.txt  Reco.xml  Reco_backup.xml  steering.xml  steering_AdriChecksEUDAQ.xml  steering_raw.xml  steering_raw_v1.5.xml
